--- a/5. Typescript/demo-complete-day-two/package.json
+++ b/5. Typescript/demo-complete-day-two/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.0",
-    "typings": "^1.3.2"
+    "jquery": "^3.1.0"
   }
 }
